# fetalib

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  Makefile  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  arguments_8hpp.html  classfeta_1_1ArgumentParser.html  classfeta_1_1JsonReader.html  classfeta_1_1color.html  classfeta_1_1directories.html  colors_8hpp.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_6f58ab03af7c4df6aaecc0fc905633c4.html  dir_7b7a290b1e8a2aad507e621cb82d3998.html  dir_93bc29c9ef242167634e1b57daaa83b6.html  dir_acb4839ca79f50bf4a13ccd8666f8c9e.html  dir_ef3b2545113449f8f25e623a543d64e3.html  directories_8hpp.html  files.html  index.html  json_8hpp.html  modules.html  namespacefeta.html  namespacefeta_1_1color.html  namespacefeta_1_1detail.html  namespaces.html  namespacestd.html  pages.html  searchdata-v1.js  structfeta_1_1Argument.html  structfeta_1_1ArgumentDependency.html  structfeta_1_1Validation.html  structfeta_1_1__loc__dirs.html  (+8 more)
.cache/clangd/index/: CMakeCXXCompilerId.cpp.71A45A4CF6470DC5.idx  arguments.cpp.0AABDBE59283B66B.idx  arguments.hpp.D0C669CB553561DC.idx  directories.cpp.107D7D1F47D0DFA6.idx  (+8 more)
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  external-lib.cmake  install-config.cmake  install-rules.cmake  sources.cmake  variables.cmake
include/fetalib/: directories.hpp  json.hpp
src/fetalib/: directories.cpp  json.cpp
test/: CMakeLists.txt
test/resources/: test.json
test/src/: argtest.cpp  commontest.cpp  directory_tests.cpp  json_tests.cpp
(+9 files in other folders)
